Change around divs for score displays

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div id="home-score-container">
         <div>
           <h3 class="headers">HOME</h3>
-          <div class="score-display">
-            <p id="home-score">0</p>
+          <div>
+            <p class="score-display" id="home-score">0</p>
           </div>
           <div>
             <button class="btn" onclick="homeAddOne()">+1</button>
@@ -30,8 +30,8 @@
       </div>
       <div id="guest-score-container">
         <h3 class="headers">GUEST</h3>
-        <div class="score-display">
-          <p id="guest-score">0</p>
+        <div>
+          <p class="score-display" id="guest-score">0</p>
         </div>
         <div>
           <button class="btn" onclick="guestAddOne()">+1</button>
