Implemented reset button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </div>
       </div>
     </div>
+    <div id="footer">
+      <button id="reset-btn" onclick="reset()">Reset</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
