--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div id="home-score-container">
         <div>
-          <h3 class="headers">HOME</h3>
+          <p class="headers">HOME</p>
           <div>
             <p class="score-display" id="home-score">0</p>
           </div>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div id="guest-score-container">
-        <h3 class="headers">GUEST</h3>
+        <p class="headers">GUEST</p>
         <div>
           <p class="score-display" id="guest-score">0</p>
         </div>
