--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div id="guest-score-container">
-        <p class="headers">GUEST</p>
+        <p class="headers">AWAY</p>
         <div>
           <p class="score-display" id="guest-score">0</p>
         </div>
